--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,13 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   very_good_analysis: ^3.0.0
 
+  icons_launcher: ^1.1.9
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/icon_circle.png"
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
