--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,10 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
+linux/
+macos/
+windows/
+
 
 # Web related
 lib/generated_plugin_registrant.dart
@@ -45,3 +49,4 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+macos/Flutter/GeneratedPluginRegistrant.swift
