--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,7 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 macos/Flutter/GeneratedPluginRegistrant.swift
+
+# Supabase
+**/supabase/.branches
+**/supabase/.temp
