--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,10 +27,12 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  animations: ^2.0.3
   cupertino_icons: ^1.0.2
   equatable: ^2.0.3
   flutter:
     sdk: flutter
+  flutter_offline: ^2.1.0
   font_awesome_flutter: ^10.1.0
   google_fonts: ^3.0.1
   hive_flutter: ^1.1.0
@@ -38,6 +40,7 @@ dependencies:
   provider: ^6.0.3
   shared_preferences: ^2.0.15
   shimmer: ^2.0.0
+  sticky_headers: ^0.3.0+2
   timeago: ^3.2.2
 
 dev_dependencies:
