--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,14 +30,20 @@ dependencies:
   animations: ^2.0.3
   cupertino_icons: ^1.0.2
   equatable: ^2.0.3
+  feedback_sentry: ^2.3.0
   flutter:
     sdk: flutter
   flutter_offline: ^2.1.0
+  flutter_sticky_header: ^0.6.4
+  flutter_svg: ^1.1.1+1
   font_awesome_flutter: ^10.1.0
   google_fonts: ^3.0.1
+  great_list_view: ^0.1.4
   hive_flutter: ^1.1.0
   http: ^0.13.4
+  lottie: ^1.3.0
   provider: ^6.0.3
+  sentry_flutter: ^6.6.3
   shared_preferences: ^2.0.15
   shimmer: ^2.0.0
   sticky_headers: ^0.3.0+2
@@ -67,6 +73,7 @@ flutter:
 
   assets:
     - assets/icon/
+    - assets/lottie/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
