--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   great_list_view: ^0.1.4
   hive_flutter: ^1.1.0
   http: ^0.13.4
+  intl: ^0.17.0
   lottie: ^1.3.0
   provider: ^6.0.3
   sentry_flutter: ^6.6.3
